[gd_scene load_steps=14 format=3 uid="uid://dqlku2u04uc8n"]

[ext_resource type="Script" path="res://Scripts/game.gd" id="1_jgtvi"]
[ext_resource type="Texture2D" uid="uid://cj1r8dxiwfj3x" path="res://Sprites/Background/Table.png" id="2_0bqkd"]
[ext_resource type="PackedScene" uid="uid://bhs82fumcwpcg" path="res://Scenes/paper_getter.tscn" id="2_fr3k8"]
[ext_resource type="Texture2D" uid="uid://b26eivbei0ti0" path="res://Sprites/Background/Blinds.png" id="3_u1x5x"]
[ext_resource type="PackedScene" uid="uid://csu0d16ji8qcq" path="res://Scenes/Documents/document.tscn" id="3_vq0w3"]
[ext_resource type="Texture2D" uid="uid://srvdm206717h" path="res://Sprites/Background/BG.png" id="6_e4nxj"]
[ext_resource type="Texture2D" uid="uid://ockqtyf763pb" path="res://Temp/mapQUICK.png" id="6_tc52k"]
[ext_resource type="PackedScene" uid="uid://bwdv2pctr3mr1" path="res://Scenes/paper_size_changer.tscn" id="7_j57od"]
[ext_resource type="PackedScene" uid="uid://dy3q0q3f1c4rv" path="res://Scenes/Documents/pass.tscn" id="8_ah5kh"]

[sub_resource type="Animation" id="Animation_nf0qn"]
resource_name = "BlindsAnim"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(208.5, 252), Vector2(208.5, 95)]
}

[sub_resource type="Animation" id="Animation_rggy6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(208.5, 95)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8qyuk"]
_data = {
"BlindsAnim": SubResource("Animation_nf0qn"),
"RESET": SubResource("Animation_rggy6")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ptmwa"]
size = Vector2(49.2131, 15.1278)

[node name="Game" type="Node2D"]
script = ExtResource("1_jgtvi")

[node name="Background" type="Node" parent="."]

[node name="Table" type="Sprite2D" parent="Background"]
z_index = -2
position = Vector2(450, 408)
scale = Vector2(3, 3)
texture = ExtResource("2_0bqkd")

[node name="Blinds" type="Sprite2D" parent="Background"]
z_index = -2
position = Vector2(208.5, 95)
scale = Vector2(3, 3)
texture = ExtResource("3_u1x5x")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Background/Blinds"]
libraries = {
"": SubResource("AnimationLibrary_8qyuk")
}
autoplay = "BlindsAnim"

[node name="MapQuick" type="Sprite2D" parent="Background"]
z_index = -1
position = Vector2(450, 67)
scale = Vector2(3, 3)
texture = ExtResource("6_tc52k")

[node name="paper_size_changer" parent="Background" instance=ExtResource("7_j57od")]
position = Vector2(138, 446)
collision_mask = 4

[node name="CollisionShape2D" parent="Background/paper_size_changer" index="0"]
visible = false
position = Vector2(65, -129)

[node name="Collisions" type="StaticBody2D" parent="Background"]
visible = false
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Background/Collisions"]
position = Vector2(449.079, 132.964)
scale = Vector2(18.3317, 20.6291)
shape = SubResource("RectangleShape2D_ptmwa")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Background/Collisions"]
position = Vector2(196, 632)
scale = Vector2(9.71188, 19.4017)
shape = SubResource("RectangleShape2D_ptmwa")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Background/Collisions"]
position = Vector2(684, 681)
scale = Vector2(11.2819, 2.70896)
shape = SubResource("RectangleShape2D_ptmwa")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Background/Collisions"]
position = Vector2(907, 410)
scale = Vector2(1.02427, 34.694)
shape = SubResource("RectangleShape2D_ptmwa")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Background/Collisions"]
position = Vector2(-5.99994, 410)
scale = Vector2(1.02427, 34.694)
shape = SubResource("RectangleShape2D_ptmwa")

[node name="Bg" type="Sprite2D" parent="Background"]
z_index = -4
position = Vector2(209, 283)
scale = Vector2(2.6, 2.6)
texture = ExtResource("6_e4nxj")

[node name="Buttons" type="Node" parent="."]

[node name="BlindsUpButton" type="Button" parent="Buttons"]
modulate = Color(1, 1, 1, 0)
offset_left = 199.0
offset_top = 349.0
offset_right = 207.0
offset_bottom = 357.0
scale = Vector2(1.64881, 2.014)
toggle_mode = true

[node name="BlindsDownButton" type="Button" parent="Buttons"]
modulate = Color(1, 1, 1, 0)
offset_left = 197.0
offset_top = 191.0
offset_right = 205.0
offset_bottom = 199.0
scale = Vector2(2.1254, 2.41989)
toggle_mode = true

[node name="PaperGetter" parent="." instance=ExtResource("2_fr3k8")]

[node name="Document" parent="." instance=ExtResource("3_vq0w3")]
position = Vector2(132, 496)

[node name="Document2" parent="." instance=ExtResource("8_ah5kh")]
position = Vector2(672, 436)

[connection signal="pressed" from="Buttons/BlindsUpButton" to="." method="_on_blinds_button_pressed"]
[connection signal="pressed" from="Buttons/BlindsDownButton" to="." method="_on_blinds_down_button_pressed"]

[editable path="Background/paper_size_changer"]
